@@ -1,7 +1,6 @@
 plugins {
   id 'java'
   id 'application'
-  id 'org.javamodularity.moduleplugin' version '1.8.12'
   id 'org.openjfx.javafxplugin' version '0.0.13'
   id 'org.beryx.jlink' version '2.25.0'
   id 'jacoco'
@@ -26,7 +25,6 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-  mainModule = 'ru.nsu.lyskov'
   mainClass = 'ru.nsu.lyskov.SnakeApp'
 }
 
@@ -36,12 +34,24 @@ javafx {
 }
 
 dependencies {
-  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+  implementation 'org.openjfx:javafx-controls:17.0.2'
+  implementation "org.openjfx:javafx-swing:17.0.2" // Версия должна совпадать с основной JavaFX
+  implementation 'org.openjfx:javafx-fxml:17.0.2'
+
+  testImplementation("org.mockito:mockito-core:5.11.0")
+  testImplementation("org.mockito:mockito-junit-jupiter:5.11.0")
+
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+  testImplementation 'org.testfx:testfx-junit5:4.0.16-alpha'
+  testImplementation 'org.testfx:openjfx-monocle:jdk-12.0.1+2'
 }
 
 test {
-useJUnitPlatform()}
+  useJUnitPlatform()
+  finalizedBy jacocoTestReport
+  jvmArgs += ['-XX:+EnableDynamicAgentLoading']
+}
 
 jlink {
   imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
@@ -49,10 +59,15 @@ jlink {
   launcher {
     name = 'app'
   }
+  jpackage {
+
+  }
 }
 
 jacocoTestReport {
+  dependsOn test
   reports {
     xml.required = true
+    html.required = true
   }
 }
